# OTUS_homeworks

./: README.md  requirements.txt
homework_01/: main.py
homework_02/: base.py  car.py  engine.py  plane.py
homework_03/: Dockerfile  README.md  main.py
homework_04/: jsonplaceholder_requests.py  main.py  models.py
homework_05/: app.py
homework_05/templates/: about.html  base.html  index.html
homework_06/: Dockerfile  app.py  config.py  docker-compose.yaml  fill_db_test_data.py  models.py  prestart.sh  pyproject.toml
homework_06/migrations/versions/: 2872d7ecf015_create_tables.py
homework_06/templates/: base.html
homework_06/templates/macros/: show-flashed-messages.html
homework_06/templates/posts/: add.html  confirm-delete.html  details.html  list.html
homework_06/views/: posts.py
homework_06/views/forms/: posts.py
homework_07/: pyproject.toml  requirements.txt
homework_07/mega_shop/: manage.py
homework_07/mega_shop/mega_shop/: asgi.py  settings.py  urls.py  wsgi.py
homework_07/mega_shop/shop/: admin.py  models.py  urls.py  views.py
homework_07/mega_shop/shop/migrations/: 0001_initial.py  0003_auto_20230703_1815.py  0005_auto_20230703_1820.py  0006_alter_product_category.py  0007_alter_category_options_alter_product_category.py  0008_product_status.py  0010_product_expiration_date.py
homework_07/mega_shop/shop/templates/: base.html
homework_07/mega_shop/shop/templates/shop/: categories-with-products-tree.html  category_detail.html  category_list.html  index.html
homework_08/: pyproject.toml
testing/test_homework_02/: test_plane.py
(+16 files in other folders)
