[tool.poetry]
name = "homework-06"
version = "0.1.0"
description = ""
authors = ["Андрей Сильных <den41_apple@bk.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
flask = "^2.3.2"
alembic = "1.10.4"
black = "^23.3.0"
envparse = "^0.2.0"
psycopg2 = "^2.9.6"
flask-migrate = "^4.0.4"
flask-wtf = "^1.1.1"
aiohttp = "^3.8.4"
flask-sqlalchemy = "^3.0.5"
sqlalchemy = "<2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
