[tool.poetry]
name = "homework-07"
version = "0.1.0"
description = ""
authors = ["Андрей Сильных <den41_apple@bk.ru>"]
license = "MIT"
readme = "README.md"
packages = [{include = "homework_07"}]

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.2.3"
django-debug-toolbar = "^4.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
